--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=root  
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.maximumPoolSize=50  
+
+#MyBatis
+mybatis.mapperLocations=classpath:mapper/*.xml
